<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_move"
        android:icon="@drawable/ic_move"
        android:iconTint="@android:color/white"
        android:title="@string/action_change"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:iconTint="@android:color/white"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />

</menu>