...
    <string name="eta_string_start">Push button bellow to start</string>
    <string name="load_message">Load &amp; organizing your messages</string>
    <string name="halfway_done_message">Halfway done</string>

    <string name="progress_percent">%1$d%%</string>
    <string name="soon">Just a moment</string>
    <string name="action_delete">Delete</string>
    <string name="action_change">Change</string>
    <string name="cancel">Cancel</string>

    <plurals name="delete_conversation">
        <item quantity="one">Delete this conversation?</item>
        <item quantity="two">Delete this conversations?</item>
        <item quantity="many">Delete this conversations?</item>
        <item quantity="other">Delete this conversations?</item>
...
